Privacy policy update

--- a/privacy/sipmore/index.html
+++ b/privacy/sipmore/index.html
@@ -91,14 +91,14 @@
                         <span style="color: rgb(89, 89, 89);">
                             <span data-custom-class="body_text">
                                 Thank you for choosing to be part of our community at
-                                <bdt class="question">S.Droid Labs</bdt>
+                                <bdt class="question">Glitchcraft Labs</bdt>
                                 <bdt class="block-component"></bdt>
                                 (“
                                 <bdt class="block-component"></bdt>
                                 <strong>Company</strong>
                                 <bdt class="statement-end-if-in-editor"></bdt>
                                 ”, “<strong>we</strong>”, “<strong>us</strong>”, or “<strong>our</strong>”). We are committed to protecting your personal information and your right to privacy. If you have any questions or concerns about our policy, or our practices with regards to your personal information, please contact us at
-                                <bdt class="question"><a href="mailto:s.droid.labs@gmail.com">s.droid.labs@gmail.com</a></bdt>
+                                <bdt class="question"><a href="mailto:d.best.games.studio@gmail.com">d.best.games.studio@gmail.com</a></bdt>
                                 .
                             </span>
                         </span>
@@ -134,7 +134,7 @@
                                 <bdt class="block-component"></bdt>
                                 <bdt class="forloop-component"></bdt>
                                 <bdt class="block-component"></bdt>
-                                mobile application,
+                                mobile application, SipMore
                                 <bdt class="statement-end-if-in-editor"></bdt>
                                 <bdt class="block-component"></bdt>
                                 <bdt class="forloop-component"></bdt>
@@ -642,9 +642,26 @@
                                         <li>
                                             <span style="font-size: 15px;">
                                                 <span style="color: rgb(89, 89, 89);">
-                                                    <strong><span data-custom-class="body_text">Facebook Audience Network</span></strong>
+                                                    <strong><span data-custom-class="body_text">Firebase Analytics by Google</span></strong>
                                                     <span data-custom-class="body_text">
-                                                        <a data-custom-class="link" href="https://www.facebook.com/policy.php" target="_blank"><span style="font-size: 15px;"><span>https://www.facebook.com/policy.php</span></span></a>
+                                                        <a data-custom-class="link" href="https://firebase.google.com/support/privacy" target="_blank"><span style="font-size: 15px;"><span>https://firebase.google.com/support/privacy</span></span></a>
+                                                        <bdt class="block-component"></bdt>
+                                                        <bdt class="block-component"></bdt>
+                                                        &nbsp;
+                                                    </span>
+                                                </span>
+                                                &nbsp;
+                                            </span>
+                                            &nbsp;
+                                            <bdt class="block-component"></bdt>
+                                            &nbsp;&nbsp;&nbsp;&nbsp;<br><br>
+                                        </li>
+                                        <li>
+                                            <span style="font-size: 15px;">
+                                                <span style="color: rgb(89, 89, 89);">
+                                                    <strong><span data-custom-class="body_text">AdMob by Google</span></strong>
+                                                    <span data-custom-class="body_text">
+                                                        <a data-custom-class="link" href="https://policies.google.com/privacy" target="_blank"><span style="font-size: 15px;"><span>https://policies.google.com/privacy</span></span></a>
                                                         <bdt class="block-component"></bdt>
                                                         <bdt class="block-component"></bdt>
                                                         &nbsp;
@@ -740,7 +757,7 @@
                                     <bdt class="statement-end-if-in-editor"></bdt>
                                     . If we learn that personal information from users less than 18 years of age has been collected, we will deactivate the account and take reasonable measures to promptly delete such data from our records. If you become aware of any data we have collected from children under age 18, please contact us at
                                     <bdt class="block-component"></bdt>
-                                    <bdt class="question"><a href="mailto:s.droid.labs@gmail.com">s.droid.labs@gmail.com</a></bdt>
+                                    <bdt class="question"><a href="mailto:d.best.games.studio@gmail.com">d.best.games.studio@gmail.com</a></bdt>
                                     <bdt class="else-block"></bdt>
                                     .
                                 </span>
@@ -843,7 +860,7 @@
                             <span style="font-size: 15px;">
                             <span data-custom-class="body_text">
                             If you have any further questions or comments about us or our policies, email us at
-                            <a href="mailto:s.droid.labs@gmail.com">s.droid.labs@gmail.com</a>
+                            <a href="mailto:d.best.games.studio@gmail.com">d.best.games.studio@gmail.com</a>
                             </span>
                             </span>
                             &nbsp;
