Terms of service updated

--- a/sipmore/termsofservice/index.html
+++ b/sipmore/termsofservice/index.html
@@ -150,8 +150,8 @@
                     <p style="font-size:15px;text-align:justify;">
                         <span style="color: rgb(89, 89, 89);">
                             <span data-custom-class="body_text">
-                                You shall not copy any text or images used in SipMore app without the written consent of a Drink Water
-                                Reminder representative. Doing so may constitute infringement and put you at legal risk.
+                                You shall not copy any text or images used in SipMore app without the written consent of a SipMore
+                                representative. Doing so may constitute infringement and put you at legal risk.
                             </span>
                         </span>
                     </p>
