Terms of service updated

--- a/sipmore/termsofservice/index.html
+++ b/sipmore/termsofservice/index.html
@@ -167,8 +167,8 @@
                         <span style="color: rgb(89, 89, 89);">
                             <span data-custom-class="body_text">
                                 This Terms of Service is subject to change at any time. Notices of any changes will be considered given and effective on
-                                the date posted on our app. The changes made will become effective the date they are posted. No further notice by Drink
-                                Water Reminder is required upon your continued use of our app or software.
+                                the date posted on our app. The changes made will become effective the date they are posted. No further notice by
+                                SipMore is required upon your continued use of our app or software.
                             </span>
                         </span>
                     </p>
